--- a/about.css
+++ b/about.css
@@ -6,6 +6,8 @@ html, body {
   height: 100%;
   font-size: 1.2rem;
   font-family:Arial, Helvetica, sans-serif;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 main {
@@ -28,7 +30,7 @@ overflow: hidden;
   text-align: right;
   font-style: oblique;
   padding: 20px;
-  border-bottom: 2px solid #333333;
+  border-bottom: 3px solid #333333;
   font-size: 16px;
   text-transform: uppercase;
   display: flex;
@@ -44,9 +46,11 @@ overflow: hidden;
   grid-area: sidebar;
   text-align: justify;
   padding: 45px;
+  padding-bottom: 0px;
   font-size: 14px;
   overflow-y: scroll;
   background-color: white;
+  border-bottom: 3px solid #333333;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -63,13 +67,14 @@ scrollbar-width: none;  /* Firefox */
 .item-c {
   grid-area: main;
   margin-top: 25px;
+  border-bottom: 3px solid #333333;
 }
 .item-d {
   grid-area: footer;
-  padding-left: 75vh;
-  display:inline-flex;
   position: relative;
-  border-top: 2px solid #333333;
+  margin: 0;
+  z-index: 10000;
+  object-fit: cover;
 }
 
 .grid-container {  
@@ -106,44 +111,29 @@ a{
 }
 
 a:hover{
-  text-decoration: underline 2px solid #333333;
+  text-decoration: underline 3px solid #333333;
   font-style: italic;
 }
 
 .draggable {
-  position: absolute;
   cursor: move;
-  z-index: 20;
   align-items: center;
-  justify-content:space-between;
+  z-index: 100;
+  padding: 1.5vw;
+  transform: scale(.6);
+  position: absolute; 
+  filter: brightness(1.3) saturate(0);
 }
 
 .draggable:hover {
-  filter: brightness(0);
+  transform: scale(.75);
+  rotate: 8deg;
+  z-index: 500;
+  filter: brightness(1) saturate(1);
 }
 
-#l1:hover,#l2:hover,#l3:hover,#l4:hover,#l5:hover,#l6:hover,#l7:hover,#l8:hover {
-  filter: drop-shadow(0px 0px 10px #B9B5AF);
-}
-
-#c1:hover,#c2:hover,#c3:hover,#c4:hover,#c5:hover,#c6:hover,#c7:hover,#c8:hover {
-  filter: drop-shadow(0px 0px 10px #B9B5AF);
-}
-
-#k1:hover,#k2:hover,#k3:hover,#k4:hover,#k5:hover,#k6:hover,#k7:hover,#k8:hover {
-  filter: drop-shadow(0px 0px 10px #A5B9DC);
-}
-
-#a1:hover,#a2:hover,#a3:hover,#a4:hover,#a5:hover,#a6:hover,#a7:hover,#a8:hover {
-  filter: drop-shadow(0px 0px 10px #746D69);
-}
-
-#n1:hover,#n2:hover,#n3:hover,#n4:hover,#n5:hover,#n6:hover,#n7:hover,#n8:hover {
-  filter: 
-        drop-shadow( 5px  0px 0px blue) 
-        drop-shadow(-5px  0px 0px blue)
-        drop-shadow( 0px  5px 0px blue) 
-        drop-shadow( 0px -5px 0px blue);
+img { 
+  transform: scale(1);
 }
 
 
