--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,76 @@
-img {
-    scale: 0.8;
+html, body, main {
+    background-color: #333333;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    font-size: 1.2rem;
+    max-width: 100vw;
+    height: 100vh;
+  }
+  
+  img {
+    scale: .8;
 }
+
+.icon1 {
+    align-items: center;
+    z-index: 900;
+    padding: 3vw;
+    position: relative; 
+    filter: brightness(1.3) saturate(0);
+    transition: ease-in-out 400ms;
+    display: flex;
+    float:right;
+  }
+  
+  .icon:hover {
+    filter: brightness(1) saturate(1);
+  }
+
+      .container {
+        display: flex;
+        margin: 0;
+        z-index: 7;
+        height: 100vh;
+        position: relative;
+        
+      }
+      
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      .background::-webkit-scrollbar {
+        display: none;
+      }
+      
+      /* Hide scrollbar for IE, Edge and Firefox */
+      .background {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+      }
+
+
+      .item {
+        margin: 0;
+        position: fixed;
+        width: 100vw;
+        height: 100vh;
+      }
+
+      .item2 {
+        padding-top: 400px;
+        left: 100px;
+      }
+
+      .item3 {
+        padding-top: 150px;
+        left: 400px;
+      }
+
+      .item4 {
+        top: 0px;
+        left: 800px;
+      }
+
+      .item5 {
+        padding-top: 400px;
+        left: 1000px;
+      }
