--- a/archivecopy.css
+++ b/archivecopy.css
@@ -36,6 +36,17 @@ hr {
   overflow: scroll;
 }
 
+     /* Hide scrollbar for Chrome, Safari and Opera */
+     .flex-container::-webkit-scrollbar {
+      display: none;
+    }
+    
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .flex-container {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+    }
+
 img {
   max-width: 450px;
   filter: blur(1000px);
