--- a/about.css
+++ b/about.css
@@ -47,7 +47,7 @@ width: 100vw;
   text-align: justify;
   padding: 45px;
   padding-bottom: 0px;
-  font-size: 14px;
+  font-size: 13px;
   overflow-y: scroll;
   background-color: white;
   border-bottom: 3px solid #333333;
@@ -123,6 +123,7 @@ a:hover{
   transform: scale(.6);
   position: absolute; 
   filter: brightness(1.3) saturate(0);
+  transition: ease-out 250ms;
 }
 
 .draggable:hover {
