--- a/about.css
+++ b/about.css
@@ -28,13 +28,15 @@ width: 100vw;
 .item-a {
   grid-area: header;
   text-align: right;
-  font-style: oblique;
-  padding: 20px;
+  padding: 30px;
   border-bottom: 3px solid #333333;
-  font-size: 16px;
+  font-size: 30px;
   text-transform: uppercase;
   display: flex;
   justify-content: space-between;
+  font-family: "Doppio One", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 .title{
   text-align: left;
