--- a/about.css
+++ b/about.css
@@ -5,7 +5,12 @@ html, body {
   padding: 0;
   height: 100%;
   font-size: 1.2rem;
-  font-family:Arial, Helvetica, sans-serif;
+  font-family: "Archivo", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 112.5;
   background-repeat: no-repeat;
   background-attachment: fixed;
   overflow: hidden;
