--- a/archivecopy.css
+++ b/archivecopy.css
@@ -1,5 +1,10 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Archivo", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 112.5;
   width: 100vw;
   height: 100vh;
   background-color: #ECE9E0;
@@ -69,6 +74,12 @@ button {
   text-transform: uppercase;
   margin-left: 10px;
   transition: ease-in-out 250ms;
+  font-family: "Archivo", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 112.5;
 }
 
 #living:hover {
