--- a/about.css
+++ b/about.css
@@ -55,6 +55,7 @@ width: 100vw;
   padding: 45px;
   padding-bottom: 0px;
   font-size: 13px;
+  line-height: 18px;
   overflow-y: scroll;
   background-color: white;
   border-bottom: 3px solid #333333;
