--- a/archivecopy.css
+++ b/archivecopy.css
@@ -161,3 +161,38 @@ a:hover{
   text-decoration: underline 3px solid #333333;
   font-style: italic;
 }
+
+@media screen and (max-width: 499px){
+
+    .flex-container {
+      flex-direction:column;
+    }
+    .tabs {
+      display: flex;
+      padding: 0;
+      margin: 0;
+      font-size: 18px;
+      justify-content: space-around;
+      height: 10vh;
+    }
+
+    .filter {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    button{
+      margin: 5px;
+    }
+
+    .head {
+      padding: 0;
+      display: flex;
+      height: 10vh;
+      justify-content: space-around;
+    }
+    .title {
+      font-size: 40px;
+      text-align: center;
+    }
+  }
